tests/NormalTests/paczka1/fuzzy1/26017167.err
Error in line 1: YVzP1TtDOD A757 24,6
Error in line 6: czChClM1M S167 6,7
Error in line 7: czChClM1M A757 86,5
Error in line 4: YVzP1TtDOD S861 57,9
Error in line 3: TwfT S167 75,0
Error in line 16: nA325i S167 68,0
Error in line 8: czChClM1M S861 55,4
Error in line 25: czChClM1M S167 54,3
Error in line 31: czChClM1M A447 45,2
